Misc. error fixes